--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -42,10 +42,6 @@ a {
     margin-bottom: 50px;
 }
 
-.content-title {
-    padding-top: 100px;
-}
-
 .navbar_logo {
     font-size:24px;
     color: white;
@@ -101,11 +97,9 @@ a {
 
 #container {
     margin: auto;
-    margin-top: 100px;
     width: 800px;
-    height: 650px;
+    height: auto;
     margin-bottom: 20px;
-    background-image: url("mainpage\static\logo2.jpg");
 }
 #videoElement {
     width: 100%;
@@ -166,7 +160,7 @@ a {
 
 #ingredient_container {
     margin: auto;
-    width: 800px;
+    width: 50%;
     height: 450px;
     text-align: center;
     margin-bottom: 20px;
@@ -227,56 +221,46 @@ a {
 }
 #slideShow{
     width: 500px;
-    height: 300px;
+    height: auto;
     position: relative;
     margin: 50px auto;
     overflow: hidden;
-}
-
-.slides{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 2500px;
-    transition: left 0.5s ease-out;
-}
-.slides li:first-child{
-    margin-left: 100px;
-}
-.slides li:not(:last-child){
-    float: left;
-    margin-right: 100px;
-}
-.slides li{
-    float: left;
-}
-.controller span{
-    position:absolute;
-    background-color: transparent;
-    color: black;
     text-align: center;
-    border-radius: 50%;
-    padding: 10px 20px;
-    top: 50%; 
-    font-size: 1.3em;
-    cursor: pointer;
-}
-.controller span:hover{
-    background-color: rgba(128, 128, 128, 0.11);
-}
-.prev{
-    left: 10px;
-}
-.prev:hover{
-    transform: translateX(-10px);
-}
-.next{
-    right: 10px;
-}
-.next:hover{
-    transform: translateX(10px);
+    align-items: center;
+    align-content: center;
 }
 
+.bg-primary {
+    background-color: #FFB30E !important;
+}
+
+.py-5 {
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+}
+
+.fridge-img {
+    text-align: center;
+}
+
+.to-do-text {
+    text-align: center;
+}
+
+.title {
+    color: #F9FAFD !important;
+}
+
+.subtitle {
+    color: #616161 !important;
+}
+
+ul#ingredient_list li {
+    padding: 5px 0px 5px 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #efefef;
+    font-size: 12px;
+}
 
 @media screen and (max-width: 850px) {
     .navbar {
@@ -326,7 +310,6 @@ a {
     }
     #container {
         width: 100%;
-        height: 350px;
     }
     #videoElement {
         width: 100%;
@@ -337,10 +320,17 @@ a {
     #ingredient_container {
         align-self: center;
         text-align: center;
-        width: 50%;
     }
     #ingredient_result {
         width: 100%;
+    }
+    #slideShow{
+        width: 100%;
+        height: auto;
+        margin-left: auto;
+    }
+    .bx-wrapper {
+        margin: auto;
     }
 }
 
