--- a/recipeboard/templates/recipeboard/recipeboard_index.html
+++ b/recipeboard/templates/recipeboard/recipeboard_index.html
@@ -11,7 +11,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style-index.css' %}?after">
+    <link rel="stylesheet" href="{% static 'css/style-index.css' %}">
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css"
@@ -63,20 +63,20 @@
 {% endif %}
 <div class="container">
     <table class="table table-hover">
-        <thead>
-            <tr id="colname">
-                {% comment %} <th scope="col" class="col">#</th> {% endcomment %}
-                <th scope="col" class="col-5" id="col0">제목</th>
-                <th scope="col" class="col-2" id="col1">작성자</th>
-                <th scope="col" class="col-2" id="col1">날짜</th>
-                <th scope="col" class="col-1" id="col1">조회수</th>
-                <th scope="col" class="col-1" id="col1">추천수</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% if board_list %}
-                {% for board in board_list%}
-                <tr>
+        {% if board_list %}
+            <thead>
+                <tr id="colname">
+                    {% comment %} <th scope="col" class="col">#</th> {% endcomment %}
+                    <th scope="col" class="col-5" id="col0">제목</th>
+                    <th scope="col" class="col-2" id="col1">작성자</th>
+                    <th scope="col" class="col-2" id="col1">날짜</th>
+                    <th scope="col" class="col-1" id="col1">조회수</th>
+                    <th scope="col" class="col-1" id="col1">추천수</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for board in board_list%}
+                <tr id="colcontent">
                     {% comment %} <td>{{board.boardid}}</td> {% endcomment %}
                     <td id="col2"><a style="text-decoration-line:none" href="{% url 'recipeboard:recipeboard_detail' board.boardid %}">{{board.title}}</a></td>
                     <td id="col3">{{board.userid.nickname}}</td>
@@ -88,35 +88,51 @@
                     <td id="col3">{{board.view}}</td>
                     <td id="col3">{{board.recommended}}</td>
                 </tr>
-                {% endfor %}
-            {% else %}
-                 <br>표시할 게시물이 없습니다!<br>
-            {% endif %}
-        </tbody>
+            {% endfor %}
+            </tbody>
+        {% else %}
+                <br>표시할 게시물이 없습니다!<br>
+        {% endif %}
     </table>
 </div>
-
+<br>
 <div class="container" id="pcontain">
-    <form action="{% url 'recipeboard:recipeboard_index' %}" method="get">
+    <form action="{% url 'communityboard:communityboard_index' %}" method="get">
         <div class="pagination" id="paginator">
             {% if board_list.has_previous and board_list.has_next %}
-                <li><a href="?page=1&kw={{kw}}"> <i class="fa-solid fa-angles-left fa-2x"></i></a></li>
-                <li><span>&nbsp;&nbsp;</span><a href="?page={{board_list.previous_page_number}}&kw={{kw}}"> <i class="fa-solid fa-angle-left fa-2x"></i></a></li>
-                <span>&nbsp;&nbsp;{{board_list.number}} / {{board_list.paginator.num_pages}}</span>
-                <li><span>&nbsp;&nbsp;</span><a href="?page={{board_list.next_page_number}}&kw={{kw}}"> <i class="fa-solid fa-angle-right fa-2x"></i> </a></li>
-                <li><span>&nbsp;&nbsp;</span><a href="?page={{board_list.paginator.num_pages}}&kw={{kw}}"> <i class="fa-solid fa-angles-right fa-2x"></i></a></li>
+                <div><a href="?page=1&kw={{kw}}"> <i class="fa-solid fa-angles-left fa-2x"></i></a></div>
+                <div>&nbsp;&nbsp;<a href="?page={{board_list.previous_page_number}}&kw={{kw}}"> <i class="fa-solid fa-angle-left fa-2x"></i></a>&nbsp;&nbsp;&nbsp;</div>
+                <a href="?page={{board_list.number|add:-1}}&kw={{kw}}"><div id="num">{{board_list.number|add:-1}}</div></a>
+                <div>&nbsp;&nbsp;</div>
+                <div id="num_now">{{board_list.number}}</div>
+                <div>&nbsp;&nbsp;</div>
+                <a href="?page={{board_list.number|add:1}}&kw={{kw}}"><div id="num">{{board_list.number|add:1}}</div></a>
+                <div>&nbsp;&nbsp;<a href="?page={{board_list.next_page_number}}&kw={{kw}}"> <i class="fa-solid fa-angle-right fa-2x"></i> </a></div>
+                <div>&nbsp;&nbsp;<a href="?page={{board_list.paginator.num_pages}}&kw={{kw}}"> <i class="fa-solid fa-angles-right fa-2x"></i></a></div>
             {% elif board_list.has_previous %}
-                <li><a href="?page=1&kw={{kw}}"> <i class="fa-solid fa-angles-left fa-2x"></i></a></li>
-                <li><span>&nbsp;&nbsp;</span><a href="?page={{board_list.previous_page_number}}&kw={{kw}}"> <i class="fa-solid fa-angle-left fa-2x"></i></a></li>
-                <span>&nbsp;&nbsp;{{board_list.number}} / {{board_list.paginator.num_pages}}</span>
-                <li><span>&nbsp;&nbsp;</span> <i class="fa-solid fa-angle-right fa-2x"></i> </li>
-                <li><span>&nbsp;&nbsp;</span> <i class="fa-solid fa-angles-right fa-2x"></i></li>
+                <div><a href="?page=1&kw={{kw}}"> <i class="fa-solid fa-angles-left fa-2x"></i></a></div>
+                <div>&nbsp;&nbsp;<a href="?page={{board_list.previous_page_number}}&kw={{kw}}"> <i class="fa-solid fa-angle-left fa-2x"></i></a>&nbsp;&nbsp;&nbsp;</div>
+                {% if board_list.paginator.num_pages != 2 %}
+                <a href="?page={{board_list.number|add:-2}}&kw={{kw}}"><div id="num">{{board_list.number|add:-2}}</div></a>
+                <div>&nbsp;&nbsp;</div>
+                {% endif %}
+                <a href="?page={{board_list.number|add:-1}}&kw={{kw}}"><div id="num">{{board_list.number|add:-1}}</div></a>
+                <div>&nbsp;&nbsp;</div>
+                <div id="num_now">{{board_list.number}}</div>
+                <div>&nbsp;&nbsp; <i id="nolink" class="fa-solid fa-angle-right fa-2x"></i> </div>
+                <div>&nbsp;&nbsp; <i id="nolink" class="fa-solid fa-angles-right fa-2x"></i></div>
             {% elif board_list.has_next %}
-                <li> <i class="fa-solid fa-angles-left fa-2x"></i></li>
-                <li><span>&nbsp;&nbsp;</span> <i class="fa-solid fa-angle-left fa-2x"></i></li>
-                <span>&nbsp;&nbsp;{{board_list.number}} / {{board_list.paginator.num_pages}}</span>
-                <li><span>&nbsp;&nbsp;</span><a href="?page={{board_list.next_page_number}}&kw={{kw}}"> <i class="fa-solid fa-angle-right fa-2x"></i> </a></li>
-                <li><span>&nbsp;&nbsp;</span><a href="?page={{board_list.paginator.num_pages}}&kw={{kw}}"> <i class="fa-solid fa-angles-right fa-2x"></i></a></li>
+                <div> <i id="nolink" class="fa-solid fa-angles-left fa-2x"></i></div>
+                <div>&nbsp;&nbsp; <i id="nolink" class="fa-solid fa-angle-left fa-2x"></i>&nbsp;&nbsp;&nbsp;</div>
+                <div id="num_now">{{board_list.number}}</div>
+                <div>&nbsp;&nbsp;</div>
+                <a href="?page={{board_list.number|add:1}}&kw={{kw}}"><div id="num">{{board_list.number|add:1}}</div></a>
+                {% if board_list.paginator.num_pages != 2 %}
+                <div>&nbsp;&nbsp;</div>
+                <a href="?page={{board_list.number|add:2}}&kw={{kw}}"><div id="num">{{board_list.number|add:2}}</div></a>
+                {% endif %}
+                <div>&nbsp;&nbsp;<a href="?page={{board_list.next_page_number}}&kw={{kw}}"> <i class="fa-solid fa-angle-right fa-2x"></i> </a></div>
+                <div>&nbsp;&nbsp;<a href="?page={{board_list.paginator.num_pages}}&kw={{kw}}"> <i class="fa-solid fa-angles-right fa-2x"></i></a></div>
             {% endif %}
         </div>
     </form>
