종아요 목록 : 이미지 테스트 못함

--- a/mypage/templates/mypage/mypage.html
+++ b/mypage/templates/mypage/mypage.html
@@ -87,7 +87,7 @@
                 <div class="content2-wrap">
                 <!-- 좋아요 목록, 북마크 목록, 내가 쓴 글 목록 영역 -->
                     <div class="contents2">
-                        <a href="" class="list-icon">
+                        <a href="{% url 'mypage:show_likeList' %}" class="list-icon">
                             <i class="bi bi-box2-heart-fill"></i>
                         </a>
                         <a href="" class="list-icon">
