--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -29,7 +29,7 @@
             <div class="navbar_right">
                 <div class="search">
                     <input id='searchfield' type='text' max_length=255 autocomplete='off'>
-                    <button class='searchbtn' onclick="search_recipe(); return false;"">검색</button>
+                    <button class='searchbtn' onclick="search_recipe(); return false;">검색</button>
                 </div>
                 <a href="{% url 'mainpage:weather' %}" class="weather">
                     <div class="temp"></div>
