--- a/recipeboard/static/css/style-detail.css
+++ b/recipeboard/static/css/style-detail.css
@@ -4,13 +4,16 @@ div.container {
 }
 a {
     text-decoration: none;
-    color:none;
+    color:#A4C454;
 }
 div.title {
     display:flex;
     align-items: center;
     font-size: 30;
     height:80px;
+}
+#recommend {
+    color:rgb(224, 15, 50);
 }
 #time{
     font-size:5;
@@ -47,7 +50,7 @@ div.comment3 {
 }
 div.bcomment1{
     display:flex;
-    margin-left:10%;
+    margin-left:5%;
 }
 div.bcomment1-1{
     float:left;
@@ -57,9 +60,9 @@ div.bcomment1-2{
     margin-left:auto;
 }
 div.bcomment2{
-    margin-left:10%;
+    margin-left:5%;
 }
 div.bcomment3 {
     font-size:4;
-    margin-left:10%;
+    margin-left:5%;
 }
