--- a/communityboard/static/css/style-cdetail.css
+++ b/communityboard/static/css/style-cdetail.css
@@ -4,7 +4,7 @@ div.container {
 }
 a {
     text-decoration: none;
-    color:none;
+    color:#F2D99E;
 }
 
 div#header{
@@ -56,7 +56,7 @@ div.comment3 {
 }
 div.bcomment1{
     display:flex;
-    margin-left:10%;
+    margin-left:5%;
 }
 div.bcomment1-1{
     float:left;
@@ -66,9 +66,9 @@ div.bcomment1-2{
     margin-left:auto;
 }
 div.bcomment2{
-    margin-left:10%;
+    margin-left:5%;
 }
 div.bcomment3 {
     font-size:4;
-    margin-left:10%;
+    margin-left:5%;
 }
