--- a/communityboard/templates/communityboard/communityboard_create.html
+++ b/communityboard/templates/communityboard/communityboard_create.html
@@ -11,7 +11,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style-create.css' %}?after">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style-ccreate.css' %}?after">
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css"
@@ -26,7 +26,7 @@
 <main>
 
 <br>
-
+<body>
 <div class="container">
     <a href="{% url 'communityboard:communityboard_index' %}"><i class="fa-solid fa-arrow-left fa-2x"></i></a>
 </div>
@@ -57,5 +57,5 @@
         <input type="submit" value="작성완료">
     </form>
 </div>
-
+</body>
 </main>
