--- a/recipeboard/templates/recipeboard/recipeboard_detail.html
+++ b/recipeboard/templates/recipeboard/recipeboard_detail.html
@@ -61,7 +61,7 @@
             {% else %}
                 <form method = "post", action="{% url 'recipeboard:recipeboard_recommend' board.boardid %}">
                     {% csrf_token %}
-                    <button type="submit" name='recommend' id="rec"><i class="fa-solid fa-heart-circle-plus fa-2x"></i></button>
+                    <button type="submit" name='recommend' id="rec"><i id="recommend" class="fa-solid fa-heart-circle-plus fa-2x"></i></button>
                 </form>
             {% endif %}
         </div>
