--- a/communityboard/templates/communityboard/communityboard_detail.html
+++ b/communityboard/templates/communityboard/communityboard_detail.html
@@ -11,7 +11,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style-cdetail.css' %}?after">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style-cdetail.css' %}">
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css"
@@ -37,12 +37,12 @@
 
 <div class="container">
     
-    <hr>
+    <hr class="level2">
     <div>
         <a href="{% url 'communityboard:communityboard_index' %}"><i class="fa-solid fa-arrow-left fa-2x"></i></a>
     </div>
 
-    <hr>
+    <hr class="level2">
 
     <div id="header"><i class="fa-solid fa-note-sticky"></i>&nbsp;{{board.header}}</div>
     <div class="title">
@@ -57,7 +57,7 @@
             {% endif %}
         </div>
     </div>
-    <hr>
+    <hr class="level2">
     <div class="info">
         <div>
             <span>글쓴이 {{board.userid.nickname}}  |</span>
@@ -89,8 +89,8 @@
     <div>
         댓글({{commentcount}})
     </div>
-    <hr>
     {% for comment in comment %}
+    <hr>
         <div class="comment1">
             <div class="comment1-1">
                 {{comment.userid.nickname}}
@@ -110,9 +110,9 @@
         <div class="comment3">
             {{comment.time|date:"Y-m-d H:i:s"}}
         </div>
-        <hr>
         {% for babycomment in babycomment %}
             {% if babycomment.parentcommentid == comment.commentid %}
+            <hr class="level1">
             <div class="bcomment1">
                 <div class="bcomment1-1">
                     <span>{{babycomment.userid.nickname}}</span>
@@ -131,10 +131,11 @@
             <div class="bcomment3">
                 <span id>{{babycomment.time|date:"Y-m-d H:i:s"}}</span>
             </div>
-            <hr>
             {% endif %}
         {% endfor %}
     {% endfor %}
+    
+    <hr>
     <br><br>
     <div class="container">
         <form method="post" action="">
