--- a/recipeboard/templates/recipeboard/recipeboard_detail.html
+++ b/recipeboard/templates/recipeboard/recipeboard_detail.html
@@ -11,7 +11,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style-detail.css' %}?after">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style-detail.css' %}">
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css"
@@ -110,8 +110,8 @@
     <div>
         댓글({{commentcount}})
     </div>
-    <hr>
     {% for comment in comment %}
+    <hr>
         <div class="comment1">
             <div class="comment1-1">
                 {{comment.userid.nickname}}
@@ -131,9 +131,10 @@
         <div class="comment3">
             {{comment.time|date:"Y-m-d H:i:s"}}
         </div>
-        <hr>
+        
         {% for babycomment in babycomment %}
             {% if babycomment.parentcommentid == comment.commentid %}
+            <hr class="level1">
             <div class="bcomment1">
                 <div class="bcomment1-1">
                     <span>{{babycomment.userid.nickname}}</span>
@@ -152,10 +153,10 @@
             <div class="bcomment3">
                 <span id>{{babycomment.time|date:"Y-m-d H:i:s"}}</span>
             </div>
-            <hr>
             {% endif %}
         {% endfor %}
     {% endfor %}
+    <hr>
     <br><br>
     <div class="container">
         <form method="post" action="">
