--- a/communityboard/static/css/style-cdetail.css
+++ b/communityboard/static/css/style-cdetail.css
@@ -6,6 +6,13 @@ a {
     text-decoration: none;
     color:#F2D99E;
 }
+hr {
+    border-radius:5pt;
+    border-top: solid 4px #4e5227;
+}
+hr.level1 {
+    border-top: solid 2px #4e5227;
+}
 
 div#header{
     font-size:15;
