--- a/users/static/style.css
+++ b/users/static/style.css
@@ -7,15 +7,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100em;
-    background-color: #e4c9fb; /*bbbbdd */
-    background: url("bg.jpg") no-repeat center;
+    
+    background-color: #F9E1A3; /*bbbbdd */
+    /*background: url("bg.jpg") no-repeat center;*/
     background-size: cover;
 }
 
 body::before{
     content: "";
-    position: absolute; z-index:1;
+    position: fixed; z-index:1;
     top:0; right: 0; bottom:0; left: 0;
     background-color: rgba(0,0,0,.5);
 
@@ -74,7 +74,7 @@ body::before{
     font-size: 15px; color : #166cea;
 }
 
-.btn-area {margin-top : 5px;}
+.btn-area {margin-top : 10px;}
 .btn-area button {
     width: 100%; height: 40px;
     background: #166cea;
