--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -74,7 +74,7 @@ style
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         
         {% load static %}
-        <link rel="stylesheet" href="{% static 'style.css' %}">
+        <link rel="stylesheet" href="{% static 'style.css' %}? after">
         <html lang = "ko">
         <head>
             <meta charset="UTF-8">
