--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -27,7 +27,7 @@
                 {% csrf_token %}
                 <div class="login-form">
                         <h1><center>SIGN UP</center></h1>
-                        <b><center>EAT VILLAGE</center><b>
+                        <b><center></center><b>
                     <div class="int-area">
                         <input name='username' 
                         id = "username"
@@ -125,7 +125,7 @@
                         <input name='test_list' 
                         type="text" 
                         check_result="fail" 
-                        autocomplate = "off"/>
+                        autocomplate = "off" required/>
                         <label for = "test_list">ALLERGY</label>
                     </div>
 
