--- a/mainpage/templates/mainpage/ingredients_result.html
+++ b/mainpage/templates/mainpage/ingredients_result.html
@@ -18,17 +18,17 @@
                 </a>
             </div>
             <ul class="navbar_menu">
-                <li><a href=''>마이페이지</a></li>
-                <li><a href=''>나눔 게시판</a></li>
-                <li><a href=''>레시피 게시판</a></li>
-                <li><a href=''>자유 게시판</a></li>
+                <li><a href="{% url 'mypage:main' %}">마이페이지</a></li>
+                {% comment %} <li><a href=''>나눔 게시판</a></li> {% endcomment %}
+                <li><a href="{% url 'recipeboard:recipeboard_index' %}">레시피 게시판</a></li>
+                <li><a href="{% url 'communityboard:communityboard_index' %}">커뮤니티 게시판</a></li>
             </ul>
             <div class="navbar_right">
                 <div class="search">
                     <input id='searchfield' type='text' max_length=255 autocomplete='off'>
                     <button class='searchbtn' onclick="search_recipe(); return false;"">검색</button>
                 </div>
-                <a href="{% url 'mainpage:weather' %}" class="weather">
+                <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
                     <div class="temp"></div>
                     <div class="icon"></div>
                 </a>
