--- a/users/static/style.css
+++ b/users/static/style.css
@@ -7,9 +7,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    background-color: #F9E1A3; /*bbbbdd */
-    /*background: url("bg.jpg") no-repeat center;*/
+    /*background-color: #F9E1A3;*/ /*bbbbdd */
+    background: url("bgg.jpg") no-repeat center;
     background-size: cover;
 }
 
@@ -29,6 +28,8 @@ body::before{
     } */
 .login-form {
     position: relative; z-index: 2; 
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 .login-form h1 {
     font-size: 34px; color: rgb(255, 255, 255);
@@ -71,13 +72,13 @@ body::before{
 .int-area input:focus + label,
 .int-area input:valid + label {
     top: -2px;
-    font-size: 15px; color : #166cea;
+    font-size: 15px; color : #eaa316; /* #166cea */
 }
 
 .btn-area {margin-top : 10px;}
 .btn-area button {
     width: 100%; height: 40px;
-    background: #166cea;
+    background: #eaa316;
     color: #fff;
     font-size: 20px;
     border: none;
