--- a/users/static/style1.css
+++ b/users/static/style1.css
@@ -8,9 +8,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*height: 100%;*/
-    background-color: #F9E1A3; 
-    /*background: url("bg.jpg") no-repeat center;*/
+    /*height: 100%;*/ 
+    background: url("bgg.jpg") no-repeat center;
     background-size: cover;
 }
 
@@ -25,7 +24,8 @@ body::before{
 .login-form {
     position: relative; z-index: 2;
     height: 100%;
-    
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 .login-form h1 {
     font-size: 30px; color: rgb(255, 255, 255);
@@ -49,7 +49,7 @@ body::before{
     background-color: transparent;
     border: none;
     border-bottom: 1px solid #999;
-    font-size: 18px; color: #fff;
+    font-size: 18px; color: #dcaa13;
     outline: none;
 }
 
@@ -72,20 +72,19 @@ body::before{
 .int-area input:focus + label,
 .int-area input:valid + label {
     top: -2px;
-    font-size: 13px; color : #166cea;
+    font-size: 13px; color : #eaa316;
 }
 
 .btn-area {margin-top : 10px;}
 .btn-area button {
     width: 100%; height: 40px;
-    background: #166cea;
+    background: #eaa316;
     color: #fff;
     font-size: 20px;
     border: none;
     border-radius: 25px;
     cursor:pointer;
 }
-
 .caption{
     margin-top : 20px;
     text-align: center;
